--- a/grammar/index.html
+++ b/grammar/index.html
@@ -3,6 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Grammar</title>
+  <script>
+  /**
+   * Math.floor: Retorna um numero inteiro
+   */
+
+    var integer = Math.floor(10.34);
+    console.log(integer);
+
+
+    var string = " text and \"example\" ";
+    console.log(string);
+
+  </script>
 </head>
 <body>
   
