--- a/objects/index-0.html
+++ b/objects/index-0.html
@@ -3,23 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <title>Object literal - 0</title>
-  <style> .container { margin-bottom: 30px; }
-  </style>
+  <link rel="stylesheet" href="../assets/css/index.css">
 </head>
 <body>
   <div class="container">
-    <div id="car"></div>
-    <div id="creat"></div>
+    <h2>Object - car</h2>
+    <div class="item-1"></div>
+    <div class="item-2"></div>
   </div>
+  
   <div class="container">
-    <div id="car-image"></div>
+    <div class="item-3"></div>
   </div>
+  
   <div class="container">
-    <div id="skate"></div>
+    <div class="item-4"></div>
   </div>
+
   <div class="container">
-    <div id="for-in"></div>
+    <h2>Order of the names of the object</h2>
+    <div class="item-5"></div>
   </div>
+
+  <div class="container">
+    <h2>Object Constructor</h2>
+    <div class="item-6"></div>
+  </div>
+
+  <div class="container">
+    <h2>Javascript Abatement</h2>
+    <p>One way to minimize the use of global variables is to create a single global variable for your application</p>
+    <div class="item-7"></div>
+  </div>
+
   <script>
    // ==========================================================================
    // Object 
@@ -40,44 +56,50 @@
     }
    }
 
-   var skateboarding = {
-    shape: "Flip",
-    wheel: "Spitfirer",
-    grip: "Greezly",
-   }
-
    car.type = "Ferrari"; // I can update value of the a property
    car.create = "Pairs create"; // I can create a new pairs o object
 
-   document.getElementById('car').innerHTML = "My car's type is " +  car["type"];
-   document.getElementById('creat').innerHTML = "Criado: " +  car["create"];
-   document.getElementById('car').innerHTML = "My car's type is " +  car.type; // If the expression is a constant i can use the . notation instead the []
-   document.getElementById('car-image').innerHTML = car.images[0] + " - " + car.teste.x;
-   document.getElementById('skate').innerHTML = "Teste skate: " + skateboarding.shape;
+   document.querySelector('.item-1').innerHTML = "My car's type is " +  car.type; // If the expression is a constant i can use the . notation instead the []
+   document.querySelector('.item-2').innerHTML = "Criado: " +  car["create"];
+   document.querySelector('.item-3').innerHTML = car.images[0] + " - " + car.teste.x;
 
-  //
+
+  // ==========================================================================
   // for in
   // ==========================================================================
+
    for(var i in car) {
+
     if(typeof car[i] !== 'function') {
-      console.log( "obj." + i + " - " + car[i]);
+      document.querySelector('.item-4').innerHTML += i + ": " + car[i] + "<br />";
     }
+
    }
 
 
-   var y;
+  // ==========================================================================
+  // Order of the names of the object
+  // ==========================================================================
    var properties = [
-    "type",
-    "model"
+    'teste',
+    'images',
+    'model',
+    'year',
+    'color',
+    'type'
    ]
 
-   for(var z = 0; z < properties.length; z += 1) {
-    console.log(properties[z]);
+   for(var z = 0; z < properties.length; z++) {
+
+    document.querySelector('.item-5').innerHTML += properties[z] + " -- " + car[properties[z]] + "<br />";
+
    }
 
-   //
+
+  // ==========================================================================
   // Object Constructor
   // ==========================================================================
+
   function skateboading(wheels, shape, truck, bearing) {
     this.wheels = wheels;
     this.shape = shape;
@@ -87,7 +109,26 @@
 
   var ideal = new skateboading("Spit fire", "Flip", "Independet", "Red Bones");
 
-  document.writeln(ideal.wheels);
+  document.querySelector(".item-6").innerHTML = ideal.wheels;
+
+
+  // ==========================================================================
+  // Global Abatement
+  // ==========================================================================
+
+  var MYAPP = {};
+
+  MYAPP.person = {
+    "first-name": "Joe", // needs quotation because of `-`
+    "last-name": "Howard" // needs quotation because of `-`
+  };;
+
+  MYAPP.car = {
+    color: "red",
+    model: "fiat"
+  };
+
+  document.querySelector(".item-7").innerHTML = MYAPP.car.color;
 
   </script>
 </body>
