--- a/functions/index-1.html
+++ b/functions/index-1.html
@@ -2,23 +2,20 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Functions - Four invocation patterns</title>
-  <style> .container { margin-bottom: 30px; }</style>
+  <title>Functions</title>
+  <link rel="stylesheet" href="../assets/css/index.css">
 </head>
 <body>
   <div class="container">
+    <p>A bonus parameter that is available to functions when they are invoked is the arguments array</p>
     <div id="item-1"></div>
+  </div>
+
+  <div class="container">
+    <h2>Exceptions</h2>
     <div id="item-2"></div>
   </div>
-  <div class="container">
-    <div id="item-3"></div>
-  </div>
-  <div class="container">
-    <div id="item-4"></div>
-  </div>
-  <div class="container">
-    <div id="item-5"></div>
-  </div>
+
   <script>
   // ==========================================================================
   // A bonus parameter that is available to functions when they are invoked is the arguments array
