--- a/functions/index-1.html
+++ b/functions/index-1.html
@@ -16,7 +16,12 @@
     <div id="item-2"></div>
   </div>
 
+  <div class="container">
+    <div class="item-3"></div>
+  </div>
+
   <script>
+
   // ==========================================================================
   // A bonus parameter that is available to functions when they are invoked is the arguments array
   // ==========================================================================
@@ -61,6 +66,13 @@
   }
 
   try_it();
+
+
+  // ==========================================================================
+  // Recursion
+  // ==========================================================================
+
+
 
   </script>
 </body>
