--- a/functions/index-1.html
+++ b/functions/index-1.html
@@ -17,13 +17,16 @@
   </div>
 
   <div class="container">
+    <h2>Recursion</h2>
+    <p>Recursion is best applied when you need to call the same function repeatedly with different parameters from within a loop. While it can be used in many situations, it is most effective for solving problems involving iterative branching, such as fractal math, sorting, or traversing the nodes of complex or non-linear data structures. <a href="https://www.sitepoint.com/recursion-functional-javascript/">Article</a></p>
     <div class="item-3"></div>
   </div>
 
   <script>
 
   // ==========================================================================
-  // A bonus parameter that is available to functions when they are invoked is the arguments array
+  // A bonus parameter that is available to functions when they are invoked is
+  // the arguments array
   // ==========================================================================
 
   var sum = function() {
@@ -72,6 +75,23 @@
   // Recursion
   // ==========================================================================
 
+  console.time('Factor');
+  var factor = function(n) {
+
+    if(n <= 0) {
+
+      return 1;
+
+    } else {
+
+      return (n * factor(n - 1));
+
+    }
+
+  }
+  console.timeEnd('Factor');
+
+  document.querySelector(".item-3").innerHTML = factor(10);
 
 
   </script>
