--- a/functions/index-0.html
+++ b/functions/index-0.html
@@ -7,15 +7,25 @@
 </head>
 <body>
   <div class="container">
-    <h2>Function Literal</h2>
+    <p>A Function Declaration defines a named function variable without requiring variable assignment.</p>
     <div id="item-1"></div>
   </div>
 
   <div class="container">
-    <div id="item-2"></div>
-</div>
+    <p>A Function Expression defines a function as a part of a larger expression syntax (typically a variable assignment ). Functions defined via Functions Expressions can be named or anonymous. Function Expressions must not start with “function” (hence the parentheses around the self invoking example below)</p>
+
+    <p>Anonymous function expression</p>
+    <div id="item-2"></div><br>
+
+    <p>Named function expression</p>
+    <div id="item-2-1"></div><br>
+
+    <p>Self invoking function expression</p>
+    <div id="item-2-2"></div>
+  </div>
 
   <div class="container">
+    <h2>Function Literal</h2>
     <div id="item-3"></div>
   </div>
 
@@ -31,7 +41,61 @@
     <div id="item-6"></div>
   </div>
 
+  <div class="container">
+    <div id="item-7"></div>
+  </div>
+
+  <div class="container">
+    <div id="item-8"></div>
+  </div>
+
   <script>
+
+  // ==========================================================================
+  // Function Declaration
+  // ==========================================================================
+
+    function foo() {
+      return 3;
+    }
+
+    document.getElementById("item-1").innerHTML = foo;
+
+
+  // ==========================================================================
+  // Function Expression
+  // ==========================================================================
+
+    //
+    // Anonymous function expression
+    // ==========================================================================
+    var a = function() {
+      return 2;
+    }
+
+    document.getElementById("item-2").innerHTML = a;
+
+    //
+    // Named function expression
+    // ==========================================================================
+    var a = function foo() {
+      return 2;
+    }
+
+    document.getElementById("item-2-1").innerHTML = a;
+
+    //
+    // Self invoking function expression
+    // ==========================================================================
+    var b = (function SayHello() {
+
+      alert("Hello !!!");
+
+    })(); // Function expressions will execute automatically if the expression is followed by ().
+
+    document.getElementById("item-2-2").innerHTML = b;
+
+
    // ==========================================================================
    // Function Literal
    // ==========================================================================
@@ -40,7 +104,9 @@
     return a + b;
    };
 
-   document.getElementById('item-1').innerHTML = add(2,5);
+   document.getElementById('item-3').innerHTML = add(2,5);
+
+   console.log("Teste add: " + add(10,30));
 
 
    // ==========================================================================
@@ -68,14 +134,14 @@
 
    obj.increment(); //Method invocation
 
-   document.getElementById('item-2').innerHTML = "Method invocation: " + obj.value;
+   document.getElementById('item-4').innerHTML = "Method invocation: " + obj.value;
 
 
    //
    // 2 - Function Invocation - is performed by invoking a function using ()
    // ==========================================================================
    var sum = add(10,10); /* When a function is invoked with this pattern, this is bound to the global object. */
-   document.getElementById('item-3').innerHTML = "Invoked function: " + sum;
+   document.getElementById('item-5').innerHTML = "Invoked function: " + sum;
 
    var value = 200;
 
@@ -88,7 +154,7 @@
       th.value++;
 
       var innerFunction = function () {
-        document.getElementById('item-4').innerHTML = th.value;
+        document.getElementById('item-6').innerHTML = th.value;
       }
 
       innerFunction(); //Function invocation ( When using the function invocation pattern, this is set to the global object an soluctions is use for example: var th = this; )
@@ -108,7 +174,7 @@
 
    var myShape = new shape("Flip");
 
-   document.getElementById("item-5").innerHTML = "The brand of my shape is: " + myShape.brand;
+   document.getElementById("item-7").innerHTML = "The brand of my shape is: " + myShape.brand;
 
    //
    // 4 - Apply invocation 
@@ -120,7 +186,7 @@
    var arr = [2, 10];
 
    // The apply method takes two parameters: The first is the value that should be bound to this. The second is an array of parameters.
-   document.getElementById('item-6').innerHTML = "Apply invocation: " + add.apply(null, arr);
+   document.getElementById('item-8').innerHTML = "Apply invocation: " + add.apply(null, arr);
 
   </script>
 </body>
