--- a/functions/closures.html
+++ b/functions/closures.html
@@ -37,6 +37,22 @@
 
   });
 
+
+  var quo = function(status) {
+
+    return {
+
+      get_status: function() {
+        return status;
+      }
+
+    };
+  };
+
+  var myQuo = quo("amazed");
+
+  document.writeln(myQuo.get_status());
+
   </script>
 </body>
 </html>
