--- a/functions/memoization.html
+++ b/functions/memoization.html
@@ -84,8 +84,54 @@
 
   })();
 
-  for(i = 0; i < 10; i++) {
-    console.log(fibonacciMulti(i));
+  // for(i = 0; i < 10; i++) {
+  //   console.log(fibonacciMulti(i));
+  // }
+
+
+  //
+  // Caching Object Arguments
+  // ==========================================================================
+  var foo = (function() {
+    var memo = {};
+
+    function f(obj) {
+      var index = JSON.stringify(obj);
+
+      if (index in memo) {
+        return memo[index];
+      } else {
+        // memoized function contents
+        return (memo[index] = function_value);
+      }
+
+    }
+
+    return f;
+  })();
+
+
+  for(var i = 0; i < 10; i++) {
+    console.log( foo("Objs: ", foo(i)) );
+  }
+
+
+  //
+  // Automatic Memoization
+  // ==========================================================================
+  function memoize(func) {
+    var memo = {};
+    var slice = Array.prototype.slice;
+
+    return function() {
+      var args = slice.call(arguments);
+
+      if (args in memo)
+        return memo[args];
+      else
+        return (memo[args] = func.apply(this, args));
+
+    }
   }
 
 
