--- a/objects/object-constructor.html
+++ b/objects/object-constructor.html
@@ -13,7 +13,8 @@
 
   <script>
   // ==========================================================================
-  // Object Constructor
+  // Object Constructor:
+  // Is just a 'function' that is called with the operator 'new'
   // ==========================================================================
 
   function skateboading(wheels, shape, truck, bearing) {
