--- a/inheritance/pseudoclassical.html
+++ b/inheritance/pseudoclassical.html
@@ -13,45 +13,12 @@
 
   <script>
   // ==========================================================================
-  // Pseudoclassical
-  // ==========================================================================
-
-
-  //
-  // Functional Instantiation
-  // ==========================================================================
-  var bar = function(name, age) {
-
-    var results = Object.create(bar.prototype);
-
-    results.name = name;
-    results.age = age;
-
-    return results;
-
-  };
-
-
-  // This way browser checks my Objects bar and don't find then find on the prototype and return my method.
-  bar.prototype.show = function() {
-    document.querySelector(".item-1").innerHTML = this.name + ' ' + this.age;
-  }
-
-  var me = new bar("Vinicius", 26);
-
-  console.log(me);
-
-  me.show();
-
-
-
-
-  //
   // Pseudo Classical Instantiation
   // ==========================================================================
+
   var person = function(firstName, lastName) {
 
-    this = Object.create(person.prototype);
+    this = Object.create(Config.prototype);
 
     this.firstName = firstName;
     this.lastName  = lastName;
@@ -66,11 +33,9 @@
 
   var other = new person("Joao", "Silva");
 
+  console.log(other);
+
   other.sayName();
-
-
-  reference: https://tylermcginnis.com/object-creation-in-javascript-functional-instantiation-vs-prototypal-instantiation-vs-pseudo-e9287b6bbb32#.mw0x9h2tx
-
 
   </script>
 </body>
