--- a/inheritance/pseudoclassical.html
+++ b/inheritance/pseudoclassical.html
@@ -18,12 +18,12 @@
 
   var person = function(firstName, lastName) {
 
-    this = Object.create(Config.prototype);
+    // this = Object.create(Config.prototype);
 
     this.firstName = firstName;
     this.lastName  = lastName;
 
-    return this;
+    // return this;
 
   };
 
@@ -36,6 +36,7 @@
   console.log(other);
 
   other.sayName();
+
 
   </script>
 </body>
