Alterado paragrafo function expression

--- a/functions/function-expression.html
+++ b/functions/function-expression.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <p>A Function Expression defines a function as a part of a larger expression syntax (typically a variable assignment ). Functions defined via Functions Expressions can be named or anonymous. Function Expressions must not start with “function” (hence the parentheses around the self invoking example below)</p>
+    <p>A Function Expression defines a function as a part of a larger expression syntax (typically a variable assignment ). Functions defined via Functions Expressions can be named or anonymous. Function Expressions must not start with “function”</p>
     <p>Anonymous function expression</p>
     <div class="item-1"></div><br>
   </div>
